--- a/Scripts/globalstyles.scss
+++ b/Scripts/globalstyles.scss
@@ -37,6 +37,7 @@ $offwhite: rgb(250, 250, 250);
   height: 100vh;
   overflow-x: hidden;
   overflow-y: scroll;
+  margin-top: 2rem;
 }
 
 // Parallax content is styled by this class
@@ -179,5 +180,9 @@ $offwhite: rgb(250, 250, 250);
   background-image: url(../Images/face2.svg);
   background-size: 55%;
   background-position: top;
+  }
+
+  .MainContainer {
+    margin-top: none;
   }
 }
