--- a/Scripts/globalstyles.css
+++ b/Scripts/globalstyles.css
@@ -49,6 +49,17 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-flex: 1;
       -ms-flex: 1 0 auto;
           flex: 1 0 auto;
@@ -60,8 +71,13 @@
   top: 0px;
   background-image: url(../Images/face2.svg);
   background-size: contain;
-  background-position: right;
+  background-position: left;
   background-repeat: no-repeat;
+}
+
+.ParallaxContainer p {
+  padding: 2rem 0rem;
+  padding-right: 10%;
 }
 
 ::-webkit-scrollbar {
@@ -73,6 +89,7 @@
   z-index: 1;
   padding-top: 0;
   background-color: white;
+  border-top: 0.25rem solid gray;
 }
 
 .navbar_container {
@@ -180,11 +197,11 @@
 }
 
 .fa {
-  color: darkred;
+  color: #ad0000;
 }
 
 .fa :hover {
-  color: lightgray;
+  color: #868686;
   -webkit-transition-duration: 0.5s;
           transition-duration: 0.5s;
 }
@@ -237,6 +254,9 @@
     background-image: url(../Images/face2.svg);
     background-size: 55%;
     background-position: top;
+  }
+  .ParallaxContainer p {
+    padding-right: 25%;
   }
   .MainContainer {
     margin-top: none;
