--- a/Scripts/globalstyles.scss
+++ b/Scripts/globalstyles.scss
@@ -5,7 +5,6 @@
 $scrollread: var(--parallaxopacity);
 $offwhite: rgb(250, 250, 250);
 
-
 * {
   margin: none;
   padding: none;
@@ -44,6 +43,10 @@ $offwhite: rgb(250, 250, 250);
 .ParallaxContainer {
   perspective: 1px;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  flex-wrap: wrap;
   flex: 1 0 auto;
   position: relative;
   height: 80vh;
@@ -52,8 +55,14 @@ $offwhite: rgb(250, 250, 250);
   top: 0px;
   background-image: url(../Images/face2.svg);
   background-size: contain;
-  background-position: right;
+  background-position: left;
   background-repeat: no-repeat;
+
+  p {
+    padding: 2rem 0rem;
+    padding-right: 10%;
+  }
+
 }
 
 // Hide parallax window scrollbar
@@ -66,6 +75,7 @@ $offwhite: rgb(250, 250, 250);
   z-index: 1;
   padding-top: 0;
   background-color: white;
+  border-top: 0.25rem solid rgb(128, 128, 128);
 }
 
 // End Parallax styles
@@ -112,7 +122,6 @@ $offwhite: rgb(250, 250, 250);
 }
 
 
-
 .logo-full > * {
   padding-left: 0;
   padding-right: 0;
@@ -136,9 +145,9 @@ $offwhite: rgb(250, 250, 250);
   width: auto;
 }
 .fa {
-  color: darkred;
+  color: rgb(173, 0, 0);
   :hover {
-    color: rgb(211, 211, 211);
+    color: rgb(134, 134, 134);
     transition-duration: 0.5s;
   }
 }
@@ -166,6 +175,15 @@ $offwhite: rgb(250, 250, 250);
   transform: rotate(180deg);
 }
 
+
+
+// .ParallaxHalf {
+//   width: 100%;
+//   display: flex;
+//   justify-content: center;
+//   border: 1px solid red;
+// }
+
 @media only screen and (min-width: 700px) {
   .nav-link {
     padding-left: 5.5rem;
@@ -180,6 +198,10 @@ $offwhite: rgb(250, 250, 250);
   background-image: url(../Images/face2.svg);
   background-size: 55%;
   background-position: top;
+
+  p {
+    padding-right: 25%;
+  }
   }
 
   .MainContainer {
