--- a/Scripts/globalstyles.scss
+++ b/Scripts/globalstyles.scss
@@ -112,10 +112,10 @@ $offwhite: rgb(250, 250, 250);
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 10%;
+  padding-right: 10%;
   height: 100%;
-  width: auto;
+  max-width: 40px;
   transition-duration: 0.05s;
   font-size: 1.5rem;
   color: rgb(87, 87, 87);
