--- a/Scripts/globalstyles.scss
+++ b/Scripts/globalstyles.scss
@@ -36,7 +36,8 @@ $offwhite: rgb(250, 250, 250);
   height: 100vh;
   overflow-x: hidden;
   overflow-y: scroll;
-  margin-top: 2rem;
+  filter: invert(var(--parallaxopacity));
+  // margin-top: 2rem;
 }
 
 // Parallax content is styled by this class
@@ -87,19 +88,21 @@ $offwhite: rgb(250, 250, 250);
   align-content: center;
   background-color: $offwhite;
   border-radius: 0.25rem;
+  width: auto;
 }
 
 
 #navbar {
   display: flex;
+  flex-direction: row;
   border-top: 0.25rem solid rgb(128, 128, 128);
   border-bottom: 0.25rem solid rgb(128, 128, 128);
 }
 
+
 #navbar > .logo-full {
   display: grid;
   grid-template-columns: auto 1fr auto 1fr auto;
-  width: 100%;
 }
 
 .nav-link:hover {
@@ -112,10 +115,10 @@ $offwhite: rgb(250, 250, 250);
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  padding-left: 0%;
-  padding-right: 0%;
-  height: 100%;
-  max-width: 40px;
+  // padding-left: 0;
+  // padding-right: 0;
+  // height: 100%;
+  // max-width: 100%;
   transition-duration: 0.05s;
   font-size: 1.5rem;
   color: rgb(87, 87, 87);
@@ -140,14 +143,13 @@ $offwhite: rgb(250, 250, 250);
 .navbar_linkbox {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  padding: 1rem 0;
-  width: auto;
+  justify-content: center;
+  padding: 1rem;
 }
 .fa {
-  color: rgb(173, 0, 0);
+  color: rgb(255, 0, 0);
   :hover {
-    color: rgb(134, 134, 134);
+    color: rgb(255, 255, 255);
     transition-duration: 0.5s;
   }
 }
@@ -175,15 +177,6 @@ $offwhite: rgb(250, 250, 250);
   transform: rotate(180deg);
 }
 
-
-
-// .ParallaxHalf {
-//   width: 100%;
-//   display: flex;
-//   justify-content: center;
-//   border: 1px solid red;
-// }
-
 @media only screen and (min-width: 700px) {
   .nav-link {
     padding-left: 5.5rem;
@@ -206,5 +199,9 @@ $offwhite: rgb(250, 250, 250);
 
   .MainContainer {
     margin-top: none;
+  }
+
+  #navbar {
+    
   }
 }
