--- a/Scripts/globalstyles.scss
+++ b/Scripts/globalstyles.scss
@@ -1,5 +1,6 @@
 :root {
   --parallaxopacity: 0;
+
 }
 
 $scrollread: var(--parallaxopacity);
@@ -36,7 +37,6 @@ $offwhite: rgb(250, 250, 250);
   height: 100vh;
   overflow-x: hidden;
   overflow-y: scroll;
-  filter: invert(var(--parallaxopacity));
   // margin-top: 2rem;
 }
 
@@ -147,10 +147,11 @@ $offwhite: rgb(250, 250, 250);
   padding: 1rem;
 }
 .fa {
-  color: rgb(255, 0, 0);
-  :hover {
-    color: rgb(255, 255, 255);
-    transition-duration: 0.5s;
+  transition: color 0.5s;
+  z-index: 20;
+  color: rgba(255, 0, 0, 0.842);
+  &:hover {
+    color: rgb(70, 0, 0);
   }
 }
 
