--- a/Scripts/globalstyles.scss
+++ b/Scripts/globalstyles.scss
@@ -115,10 +115,10 @@ $offwhite: rgb(250, 250, 250);
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  // padding-left: 0;
-  // padding-right: 0;
-  // height: 100%;
-  // max-width: 100%;
+  padding-left: 0;
+  padding-right: 0;
+  height: 100%;
+  max-width: 100%;
   transition-duration: 0.05s;
   font-size: 1.5rem;
   color: rgb(87, 87, 87);
@@ -149,9 +149,9 @@ $offwhite: rgb(250, 250, 250);
 .fa {
   transition: color 0.5s;
   z-index: 20;
-  color: rgba(255, 0, 0, 0.842);
+  color: rgba(179, 0, 0, 0.842);
   &:hover {
-    color: rgb(70, 0, 0);
+    color: rgb(255, 255, 255);
   }
 }
 
