--- a/Scripts/globalstyles.scss
+++ b/Scripts/globalstyles.scss
@@ -1,6 +1,5 @@
 :root {
   --parallaxopacity: 0;
-
 }
 
 $scrollread: var(--parallaxopacity);
@@ -33,10 +32,10 @@ $offwhite: rgb(250, 250, 250);
 
 // This is the container of the entire page, and will scroll to display new content as you move through the page.
 .MainContainer {
-  transform-style: preserve-3d;
+  // transform-style: preserve-3d;
   height: 100vh;
-  overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-x: hidden !important;
+  overflow-y: scroll !important;
   // margin-top: 2rem;
 }
 
