--- a/Scripts/globalstyles.scss
+++ b/Scripts/globalstyles.scss
@@ -9,7 +9,6 @@ $offwhite: rgb(250, 250, 250);
   margin: none;
   padding: none;
   box-sizing: border-box;
-  overflow: hidden;
   font-family: 'Raleway', sans;
   border: none;
   text-decoration: none;
@@ -34,7 +33,7 @@ $offwhite: rgb(250, 250, 250);
 .MainContainer {
   // transform-style: preserve-3d;
   height: 100vh;
-  overflow-x: hidden !important;
+  // overflow-x: hidden !important;
   overflow-y: scroll !important;
   // margin-top: 2rem;
 }
@@ -176,6 +175,19 @@ $offwhite: rgb(250, 250, 250);
   height: 3rem;
   transform: rotate(180deg);
 }
+
+.contactme_container {
+  width: 100vw;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.contactcard {
+  border: 1px solid red;
+  height: auto;
+}
+
 
 @media only screen and (min-width: 700px) {
   .nav-link {
