--- a/Scripts/globalstyles.css
+++ b/Scripts/globalstyles.css
@@ -186,10 +186,10 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -238,6 +238,23 @@
   height: 3rem;
   -webkit-transform: rotate(180deg);
           transform: rotate(180deg);
+}
+
+.contactme_container {
+  width: 100vw;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.contactcard {
+  border: 1px solid red;
+  width: 50%;
 }
 
 @media only screen and (min-width: 700px) {
