--- a/Scripts/globalstyles.scss
+++ b/Scripts/globalstyles.scss
@@ -9,6 +9,7 @@ $offwhite: rgb(250, 250, 250);
   margin: none;
   padding: none;
   box-sizing: border-box;
+  overflow: hidden;
   font-family: 'Raleway', sans;
   border: none;
   text-decoration: none;
@@ -33,7 +34,7 @@ $offwhite: rgb(250, 250, 250);
 .MainContainer {
   // transform-style: preserve-3d;
   height: 100vh;
-  // overflow-x: hidden !important;
+  overflow-x: hidden !important;
   overflow-y: scroll !important;
   // margin-top: 2rem;
 }
@@ -140,7 +141,7 @@ $offwhite: rgb(250, 250, 250);
 
 .navbar_linkbox {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   padding: 1rem;
 }
@@ -185,7 +186,7 @@ $offwhite: rgb(250, 250, 250);
 
 .contactcard {
   border: 1px solid red;
-  height: auto;
+  width: 50%;
 }
 
 
