--- a/Scripts/globalstyles.css
+++ b/Scripts/globalstyles.css
@@ -186,14 +186,15 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   padding: 1rem;
+  max-width: 100vw;
 }
 
 .fa {
@@ -250,11 +251,13 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  border: 1px solid red;
 }
 
 .contactcard {
-  border: 1px solid red;
-  width: 50%;
+  width: 25%;
+  height: 100%;
+  text-align: center;
 }
 
 @media only screen and (min-width: 700px) {
