--- a/Scripts/globalstyles.scss
+++ b/Scripts/globalstyles.scss
@@ -141,9 +141,10 @@ $offwhite: rgb(250, 250, 250);
 
 .navbar_linkbox {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   padding: 1rem;
+  max-width: 100vw;
 }
 .fa {
   transition: color 0.5s;
@@ -182,11 +183,13 @@ $offwhite: rgb(250, 250, 250);
   height: 100%;
   display: flex;
   flex-direction: row;
+  border: 1px solid red;
 }
 
 .contactcard {
-  border: 1px solid red;
-  width: 50%;
+  width: 25%;
+  height: 100%;
+  text-align: center;
 }
 
 
