--- a/Scripts/globalstyles.scss
+++ b/Scripts/globalstyles.scss
@@ -13,6 +13,7 @@ $offwhite: rgb(250, 250, 250);
   font-family: 'Raleway', sans;
   border: none;
   text-decoration: none;
+  -webkit-overflow-scrolling: scroll;
 }
 
 .topbar {
@@ -88,6 +89,7 @@ $offwhite: rgb(250, 250, 250);
   background-color: $offwhite;
   border-radius: 0.25rem;
   width: auto;
+  -webkit-overflow-scrolling: scroll;
 }
 
 
