--- a/Scripts/globalstyles.css
+++ b/Scripts/globalstyles.css
@@ -233,6 +233,10 @@
   top: 0;
 }
 
+.textcenter {
+  text-align: center;
+}
+
 .navbarlogoleft {
   height: 3rem;
 }
@@ -245,21 +249,46 @@
 
 .contactme_container {
   width: 100vw;
-  height: 100%;
+  height: 80vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  border: 1px solid red;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
 }
 
 .contactcard {
-  width: 25%;
-  height: 100%;
+  width: 80%;
+  height: 20%;
   text-align: center;
+  border: 1px solid red;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+
+.contactcard:hover {
+  height: 40%;
+}
+
+.blueback {
+  background-color: #3b5998;
+}
+
+.mediumcolour {
+  background-color: #F0F0EE;
+}
+
+.scroll-auto {
+  -webkit-overflow-scrolling: auto;
 }
 
 @media only screen and (min-width: 700px) {
@@ -283,6 +312,12 @@
   }
   .MainContainer {
     margin-top: none;
+  }
+  .contactme_container {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
 }
 /*# sourceMappingURL=globalstyles.css.map */
