--- a/Scripts/globalstyles.scss
+++ b/Scripts/globalstyles.scss
@@ -171,6 +171,10 @@ $offwhite: rgb(250, 250, 250);
   top: 0;
 }
 
+.textcenter {
+  text-align: center;
+}
+
 .navbarlogoleft {
   height: 3rem;
 }
@@ -182,18 +186,38 @@ $offwhite: rgb(250, 250, 250);
 
 .contactme_container {
   width: 100vw;
-  height: 100%;
+  height: 80vh;
   display: flex;
-  flex-direction: row;
-  border: 1px solid red;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+
 }
 
 .contactcard {
-  width: 25%;
-  height: 100%;
+  width: 80%;
+  height: 20%;
   text-align: center;
+  border: 1px solid red;
+  transition: all 0.5s;
+
+  &:hover {
+    height: 40%
+  }
 }
 
+.blueback {
+  background-color: #3b5998;
+}
+
+.mediumcolour {
+  background-color: #F0F0EE;
+}
+
+.scroll-auto {
+  -webkit-overflow-scrolling: auto;
+}
 
 @media only screen and (min-width: 700px) {
   .nav-link {
@@ -221,5 +245,10 @@ $offwhite: rgb(250, 250, 250);
 
   #navbar {
     
+  }
+
+  .contactme_container {
+    flex-direction: row;
+
   }
 }
