--- a/Scripts/globalstyles.scss
+++ b/Scripts/globalstyles.scss
@@ -12,6 +12,7 @@ $offwhite: rgb(250, 250, 250);
   font-family: 'Raleway', sans;
   border: none;
   text-decoration: none;
+  scroll-behavior: smooth;
 }
 
 .topbar {
@@ -134,8 +135,11 @@ $offwhite: rgb(250, 250, 250);
 }
 
 .logo-part {
+  display: flex;
+  flex-direction: row;
   font-size: 4rem;
-  align-self: center;
+  justify-content: center;
+  align-items: center;
   opacity: 1;
 }
 
@@ -145,6 +149,7 @@ $offwhite: rgb(250, 250, 250);
   justify-content: center;
   padding: 1rem;
   max-width: 100vw;
+  overflow: hidden;
 }
 .fa {
   transition: color 0.5s;
