--- a/Scripts/globalstyles.scss
+++ b/Scripts/globalstyles.scss
@@ -3,8 +3,8 @@
 }
 
 $scrollread: var(--parallaxopacity);
-$offwhite: rgb(250, 250, 250);
-
+$rubble: #371E30;
+$offwhite: rgb(216, 216, 216);
 * {
   margin: none;
   padding: none;
@@ -13,6 +13,12 @@ $offwhite: rgb(250, 250, 250);
   border: none;
   text-decoration: none;
   scroll-behavior: smooth;
+}
+
+body {
+  background-color: $rubble;
+  padding: none;
+  margin: none;
 }
 
 .topbar {
@@ -36,6 +42,7 @@ $offwhite: rgb(250, 250, 250);
   height: 100vh;
   overflow-x: hidden !important;
   overflow-y: scroll !important;
+  background-color: $offwhite;
   // margin-top: 2rem;
 }
 
@@ -53,7 +60,7 @@ $offwhite: rgb(250, 250, 250);
   transform: translateZ(-1px) scale(2);
   z-index: 1;
   top: 0px;
-  background-image: url(../Images/face2.svg);
+  background-image: url(../Images/facefinal.svg);
   background-size: contain;
   background-position: left;
   background-repeat: no-repeat;
@@ -74,7 +81,7 @@ $offwhite: rgb(250, 250, 250);
   position: relative;
   z-index: 1;
   padding-top: 0;
-  background-color: white;
+  background-color: $offwhite;
   border-top: 0.25rem solid rgb(128, 128, 128);
 }
 
@@ -156,8 +163,20 @@ $offwhite: rgb(250, 250, 250);
   z-index: 20;
   color: rgba(160, 160, 160, 0.842);
   &:hover {
-    color: rgb(55, 0, 255);
+    color: #ea4335;
   }
+}
+
+.fa-github {
+  color: #6e5494;
+}
+
+.fa-linkedin {
+  color: #0077b5;
+}
+
+.fa-envelope-o {
+  color: black;
 }
 
 .MediaLinks {
@@ -233,8 +252,8 @@ $offwhite: rgb(250, 250, 250);
   }
 
   .ParallaxContainer {
-  background-image: url(../Images/face2.svg);
-  background-size: 55%;
+  background-image: url(../Images/facefinal.svg);
+  background-size: contain;
   background-position: top;
 
   p {
