--- a/Scripts/globalstyles.css
+++ b/Scripts/globalstyles.css
@@ -20,8 +20,8 @@ body {
 }
 
 .topbar {
-  position: sticky;
   position: -webkit-sticky;
+  position: sticky;
   background-color: #d8d8d8;
   top: 0;
   display: -webkit-box;
@@ -36,7 +36,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  z-index: 10;
+  z-index: 2;
   background-color: #d8d8d8;
 }
 
@@ -80,7 +80,7 @@ body {
 }
 
 .ParallaxContainer p {
-  padding: 2rem 0rem;
+  padding: 1rem 0rem;
   padding-right: 10%;
 }
 
@@ -213,13 +213,13 @@ body {
           justify-content: center;
   padding: 1rem;
   max-width: 100vw;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 .fa {
   -webkit-transition: color 0.5s;
   transition: color 0.5s;
-  z-index: 20;
+  z-index: 2;
   color: rgba(160, 160, 160, 0.842);
 }
 
