--- a/Scripts/globalstyles.scss
+++ b/Scripts/globalstyles.scss
@@ -22,15 +22,16 @@ body {
 }
 
 .topbar {
-  position: sticky;
   position: -webkit-sticky;
+  position: sticky;
+  
   background-color: $offwhite;
   top: 0;
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: center;
-  z-index: 10;
+  z-index: 2;
   background-color: $offwhite;
 }
 
@@ -66,7 +67,7 @@ body {
   background-repeat: no-repeat;
 
   p {
-    padding: 2rem 0rem;
+    padding: 1rem 0rem;
     padding-right: 10%;
   }
 
@@ -156,11 +157,11 @@ body {
   justify-content: center;
   padding: 1rem;
   max-width: 100vw;
-  overflow: hidden;
+  overflow: scroll;
 }
 .fa {
   transition: color 0.5s;
-  z-index: 20;
+  z-index: 2;
   color: rgba(160, 160, 160, 0.842);
   &:hover {
     color: #ea4335;
