--- a/Scripts/globalstyles.css
+++ b/Scripts/globalstyles.css
@@ -68,14 +68,14 @@ body {
       -ms-flex: 1 0 auto;
           flex: 1 0 auto;
   position: relative;
-  height: 80vh;
+  height: 72vh;
   -webkit-transform: translateZ(-1px) scale(2);
           transform: translateZ(-1px) scale(2);
   z-index: 1;
   top: 0px;
   background-image: url(../Images/facefinal.svg);
-  background-size: contain;
-  background-position: left;
+  background-size: 125%;
+  background-position: center;
   background-repeat: no-repeat;
 }
 
@@ -213,7 +213,7 @@ body {
           justify-content: center;
   padding: 1rem;
   max-width: 100vw;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .fa {
