--- a/Scripts/globalstyles.scss
+++ b/Scripts/globalstyles.scss
@@ -57,13 +57,13 @@ body {
   flex-wrap: wrap;
   flex: 1 0 auto;
   position: relative;
-  height: 80vh;
+  height: 72vh;
   transform: translateZ(-1px) scale(2);
   z-index: 1;
   top: 0px;
   background-image: url(../Images/facefinal.svg);
-  background-size: contain;
-  background-position: left;
+  background-size: 125%;
+  background-position: center;
   background-repeat: no-repeat;
 
   p {
@@ -157,7 +157,7 @@ body {
   justify-content: center;
   padding: 1rem;
   max-width: 100vw;
-  overflow: scroll;
+  overflow: auto;
 }
 .fa {
   transition: color 0.5s;
