--- a/Scripts/globalstyles.scss
+++ b/Scripts/globalstyles.scss
@@ -107,11 +107,16 @@ body {
 }
 
 
-#navbar > .logo-full {
-  display: grid;
-  grid-template-columns: auto 1fr auto 1fr auto;
-}
+// #navbar > .logo-full {
+//   display: grid;
+//   grid-template-columns: auto 1fr auto 1fr auto;
+// }
 
+#navbar > .logo-full {
+  display: flex;
+  flex-direction: row;
+
+}
 .nav-link:hover {
   background-color: darkgrey;
   transition-duration: 0.5s;
