--- a/Scripts/globalstyles.scss
+++ b/Scripts/globalstyles.scss
@@ -112,11 +112,7 @@ body {
 //   grid-template-columns: auto 1fr auto 1fr auto;
 // }
 
-// #navbar > .logo-full {
-//   display: flex;
-//   flex-direction: row;
-
-// }
+// 
 .nav-link:hover {
   background-color: darkgrey;
   transition-duration: 0.5s;
