--- a/Scripts/globalstyles.scss
+++ b/Scripts/globalstyles.scss
@@ -106,6 +106,11 @@ body {
   border-bottom: 0.25rem solid rgb(128, 128, 128);
 }
 
+#navbar > .logo-full {
+  display: flex;
+  flex-direction: row;
+}
+
 
 // #navbar > .logo-full {
 //   display: grid;
@@ -242,7 +247,7 @@ body {
   opacity: 0.5;
 
   &:hover {
-    height: 40%
+    height: 40%;
     opacity: 1;
   }
 }
