--- a/Scripts/globalstyles.css
+++ b/Scripts/globalstyles.css
@@ -139,6 +139,7 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  margin: 0 auto;
 }
 
 .nav-link:hover {
