--- a/Scripts/globalstyles.scss
+++ b/Scripts/globalstyles.scss
@@ -108,6 +108,7 @@ body {
   flex-direction: row;
   border-top: 0.25rem solid rgb(128, 128, 128);
   border-bottom: 0.25rem solid rgb(128, 128, 128);
+  justify-content: center;
 }
 
 #navbar > .logo-full {
