navbar center test

--- a/Scripts/globalstyles.css
+++ b/Scripts/globalstyles.css
@@ -142,7 +142,9 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  margin: 0 auto;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .nav-link:hover {
