--- a/Scripts/globalstyles.css
+++ b/Scripts/globalstyles.css
@@ -49,6 +49,7 @@ body {
   height: 100vh;
   overflow-x: hidden !important;
   overflow-y: auto !important;
+  -webkit-overflow-scrolling: touch;
   background-color: #313131;
 }
 
@@ -276,25 +277,6 @@ body {
           transform: rotate(180deg);
 }
 
-.contactme_container {
-  width: 100vw;
-  height: 80vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
-}
-
 .blueback {
   background-color: #3b5998;
 }
@@ -307,19 +289,9 @@ body {
   -webkit-overflow-scrolling: auto;
 }
 
-.contactcard {
-  width: 100%;
-  height: 20%;
-  text-align: center;
-  border: 1px solid red;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-  opacity: 0.75;
-}
-
-.contactcard:hover {
-  height: 40%;
-  opacity: 1;
+.inverted {
+  -webkit-filter: invert(100%);
+          filter: invert(100%);
 }
 
 @media only screen and (min-width: 700px) {
@@ -335,8 +307,8 @@ body {
   }
   .ParallaxContainer {
     background-image: url(../Images/eyes.svg);
-    background-size: 50%;
-    background-position: center;
+    background-size: 60%;
+    background-position: right;
   }
   .ParallaxContainer p {
     padding-right: 25%;
