--- a/Scripts/contactstyles.scss
+++ b/Scripts/contactstyles.scss
@@ -2,7 +2,6 @@
 
 .blog {
   width: 100%;
-  border: 1px solid red;
 }
 
 .ContactContainer {
@@ -59,7 +58,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  border: 0.5rem solid red;
+  border: 0.5rem solid $rubble;
 }
 
 .blogpost {
