--- a/Scripts/contactstyles.css
+++ b/Scripts/contactstyles.css
@@ -24,7 +24,6 @@
   transition: all 0.5s;
   opacity: 0.5;
   font-size: 4rem;
-  padding-top: 2rem;
   margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -36,15 +35,21 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+  -ms-flex-line-pack: center;
+      align-content: center;
   width: 50%;
   height: 50%;
 }
 
 .contactcard:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+  z-index: 2;
   opacity: 1;
+}
+
+.contactcard span {
+  margin: auto 0;
 }
 
 .contactme_container {
@@ -60,6 +65,8 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   margin: 0 auto;
@@ -83,12 +90,14 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  border: 0.5rem solid red;
+  border: 0.5rem solid darkslategrey;
 }
 
 .blogpost {
   width: 100%;
+  height: 20%;
   height: 4rem;
   text-align: center;
+  border-bottom: 0.5rem solid darkslategrey;
 }
 /*# sourceMappingURL=contactstyles.css.map */
