Portfolio styling and extra content composed

--- a/Scripts/contactstyles.css
+++ b/Scripts/contactstyles.css
@@ -42,8 +42,8 @@
 }
 
 .contactcard:hover {
-  -webkit-transform: scale(1.05);
-          transform: scale(1.05);
+  -webkit-transform: scaleX(1.05);
+          transform: scaleX(1.05);
   z-index: 2;
   opacity: 1;
 }
@@ -99,5 +99,14 @@
   height: 4rem;
   text-align: center;
   border-bottom: 0.5rem solid darkslategrey;
+  margin: auto 0;
+}
+
+.blogpost h3 {
+  text-decoration: none;
+}
+
+.topbar {
+  z-index: 4;
 }
 /*# sourceMappingURL=contactstyles.css.map */
