--- a/Scripts/portfoliostyles.css
+++ b/Scripts/portfoliostyles.css
@@ -1,4 +1,384 @@
+:root {
+  --parallaxopacity: 0;
+}
+
+.invert {
+  -webkit-filter: invert(100%);
+          filter: invert(100%);
+}
+
+* {
+  margin: none;
+  padding: none;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: 'Raleway', sans;
+  border: none;
+  text-decoration: none;
+  scroll-behavior: smooth;
+}
+
+body {
+  background-color: #371E30;
+  padding: none;
+  margin: none;
+}
+
+.topbar {
+  position: -webkit-sticky;
+  position: sticky;
+  background-color: #dbdbdb;
+  top: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  z-index: 2;
+  background-color: #dbdbdb;
+}
+
+.MainContainer {
+  height: 100vh;
+  overflow-x: hidden !important;
+  overflow-y: auto !important;
+  -webkit-overflow-scrolling: touch;
+  background-color: #313131;
+}
+
+.ParallaxContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto;
+  position: relative;
+  height: 72vh;
+  -webkit-transform: translateZ(-1px) scale(2);
+          transform: translateZ(-1px) scale(2);
+  z-index: -1;
+  top: 0px;
+  background-image: url(../Images/facefinal.svg);
+  background-size: 125%;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.ParallaxContainer p {
+  padding: 1rem 0rem;
+  padding-right: 10%;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+.ContentContainer {
+  position: relative;
+  z-index: 1;
+  padding-top: 0;
+  background-color: #dbdbdb;
+  border-top: 0.25rem solid gray;
+}
+
+.navbar_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  background-color: #dbdbdb;
+  border-radius: 0.25rem;
+  width: auto;
+}
+
+#navbar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  border-top: 0.25rem solid gray;
+  border-bottom: 0.25rem solid gray;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#navbar > .logo-full {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.nav-link:hover {
+  background-color: #313131;
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
+}
+
+.nav-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-left: 0;
+  padding-right: 0;
+  height: 100%;
+  max-width: 100%;
+  -webkit-transition-duration: 0.05s;
+          transition-duration: 0.05s;
+  font-size: 1.5rem;
+  color: #575757;
+  overflow: hidden;
+}
+
+.logo-full > * {
+  padding-left: 0;
+  padding-right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.logo-part {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-size: 4rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  opacity: 1;
+}
+
+.navbar_linkbox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 1rem;
+  max-width: 100vw;
+  overflow: auto;
+}
+
+.fa {
+  -webkit-transition: color 0.5s;
+  transition: color 0.5s;
+  z-index: 2;
+  color: #371E30;
+}
+
+.fa:hover {
+  color: #000000;
+}
+
+.MediaLinks {
+  background-color: #dbdbdb;
+  height: auto;
+  width: 100vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  height: auto;
+  font-size: 2.25rem;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+}
+
+.textcenter {
+  text-align: center;
+}
+
+.navbarlogoleft {
+  height: 3rem;
+}
+
+.navbarlogoright {
+  height: 3rem;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.blueback {
+  background-color: #3b5998;
+}
+
+.mediumcolour {
+  background-color: #F0F0EE;
+}
+
+.scroll-auto {
+  -webkit-overflow-scrolling: auto;
+}
+
+.inverted {
+  -webkit-filter: invert(100%);
+          filter: invert(100%);
+}
+
+@media only screen and (min-width: 700px) {
+  .nav-link {
+    padding: 0 5.5rem 0 5.5rem;
+  }
+}
+
+@media only screen and (min-width: 1000px) {
+  .nav-link {
+    padding-left: 5.5rem;
+    padding-right: 5.5rem;
+  }
+  .navbar_linkbox {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .ParallaxContainer {
+    background-image: url(../Images/eyes.svg);
+    background-size: 60%;
+    background-position: right;
+  }
+  .ParallaxContainer p {
+    padding-right: 25%;
+  }
+  .MainContainer {
+    margin-top: none;
+  }
+  .contactme_container {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+
 .portfolio {
-  background-color: white;
+  background-color: #dbdbdb;
+  height: 80vh;
+  width: 90vw;
+  margin: 0 auto;
+}
+
+.skillbar {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  background-color: #b9a4a4;
+  padding: 2rem 0;
+  border-bottom: 0.25rem solid #371E30;
+  border-bottom-left-radius: 0.25rem;
+  border-bottom-right-radius: 0.25rem;
+}
+
+.skillbar:first-of-type {
+  border-top: 0.25rem solid #371E30;
+}
+
+.skilldesc {
+  width: 75%;
+  text-align: center;
+}
+
+.skilltile {
+  width: 25%;
+  font-size: 4rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 /*# sourceMappingURL=portfoliostyles.css.map */
