--- a/Scripts/globalstyles.scss
+++ b/Scripts/globalstyles.scss
@@ -261,9 +261,9 @@ body {
   }
 
   .ParallaxContainer {
-  background-image: url(../Images/eyes.svg);
-  background-size: 60%;
-  background-position: right;
+  background-image: url(../Images/facefinal.svg);
+  background-size: 50%;
+  background-position: center;
 
   p {
     padding-right: 25%;
