--- a/Scripts/contactstyles.css
+++ b/Scripts/contactstyles.css
@@ -22,7 +22,7 @@
   text-align: center;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
-  opacity: 0.5;
+  opacity: 0.75;
   font-size: 4rem;
   margin: 0 auto;
   display: -webkit-box;
@@ -42,14 +42,18 @@
 }
 
 .contactcard:hover {
-  -webkit-transform: scaleX(1.05);
-          transform: scaleX(1.05);
-  z-index: 2;
   opacity: 1;
 }
 
+.contactcard a {
+  width: 100%;
+  height: 100%;
+}
+
 .contactcard span {
-  margin: auto 0;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
 
 .contactme_container {
