Portfolio tile updates, css mods

--- a/Scripts/globalstyles.scss
+++ b/Scripts/globalstyles.scss
@@ -169,6 +169,7 @@ body {
 
 .navbar_linkbox {
   display: flex;
+  flex: 1;
   flex-direction: column;
   justify-content: center;
   padding: 1rem;
