--- a/Scripts/globalstyles.scss
+++ b/Scripts/globalstyles.scss
@@ -169,13 +169,14 @@ body {
 
 .navbar_linkbox {
   display: flex;
-  // flex: 1;
+  flex: 1;
   flex-direction: column;
   justify-content: center;
   padding: 1rem;
   max-width: 100vw;
-  overflow: auto;
+  overflow: hidden;
 }
+
 .fa {
   transition: color 0.5s;
   z-index: 2;
