--- a/Scripts/contactstyles.css
+++ b/Scripts/contactstyles.css
@@ -1,4 +1,338 @@
-@import url(c:\Users\cdrex\Desktop\Projects\Assessments\Final Website\Files\Scripts\globalstyles.css);
+:root {
+  --parallaxopacity: 0;
+}
+
+.invert {
+  -webkit-filter: invert(100%);
+          filter: invert(100%);
+}
+
+* {
+  margin: none;
+  padding: none;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: 'Raleway', sans;
+  border: none;
+  text-decoration: none;
+  scroll-behavior: smooth;
+}
+
+body {
+  background-color: #371E30;
+  padding: none;
+  margin: none;
+}
+
+.topbar {
+  position: -webkit-sticky;
+  position: sticky;
+  background-color: #dbdbdb;
+  top: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  z-index: 2;
+  background-color: #dbdbdb;
+}
+
+.MainContainer {
+  height: 100vh;
+  overflow-x: hidden !important;
+  overflow-y: auto !important;
+  -webkit-overflow-scrolling: touch;
+  background-color: #313131;
+}
+
+.ParallaxContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto;
+  position: relative;
+  height: 72vh;
+  -webkit-transform: translateZ(-1px) scale(2);
+          transform: translateZ(-1px) scale(2);
+  z-index: -1;
+  top: 0px;
+  background-image: url(../Images/facefinal.svg);
+  background-size: 125%;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.ParallaxContainer p {
+  padding: 1rem 0rem;
+  padding-right: 10%;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+.ContentContainer {
+  position: relative;
+  z-index: 1;
+  padding-top: 0;
+  background-color: #dbdbdb;
+  border-top: 0.25rem solid gray;
+}
+
+.navbar_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  background-color: #dbdbdb;
+  border-radius: 0.25rem;
+  width: auto;
+}
+
+#navbar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  border-top: 0.25rem solid gray;
+  border-bottom: 0.25rem solid gray;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#navbar > .logo-full {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.nav-link:hover {
+  background-color: #313131;
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
+}
+
+.nav-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-left: 0;
+  padding-right: 0;
+  height: 100%;
+  max-width: 100%;
+  -webkit-transition-duration: 0.05s;
+          transition-duration: 0.05s;
+  font-size: 1.5rem;
+  color: #3d3d3d;
+  overflow: hidden;
+}
+
+.logo-full > * {
+  padding-left: 0;
+  padding-right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.logo-part {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-size: 4rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  opacity: 1;
+}
+
+.navbar_linkbox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 1rem;
+  max-width: 100vw;
+  overflow: hidden;
+}
+
+.fa {
+  -webkit-transition: color 0.5s;
+  transition: color 0.5s;
+  z-index: 2;
+  color: #371E30;
+}
+
+.fa:hover {
+  color: #000000;
+}
+
+.MediaLinks {
+  background-color: #dbdbdb;
+  height: auto;
+  width: 100vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  height: auto;
+  font-size: 2.25rem;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+}
+
+.textcenter {
+  text-align: center;
+}
+
+.navbarlogoleft {
+  height: 3rem;
+}
+
+.navbarlogoright {
+  height: 3rem;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.blueback {
+  background-color: #3b5998;
+}
+
+.mediumcolour {
+  background-color: #F0F0EE;
+}
+
+.scroll-auto {
+  -webkit-overflow-scrolling: auto;
+}
+
+.inverted {
+  -webkit-filter: invert(100%);
+          filter: invert(100%);
+}
+
+@media only screen and (min-width: 700px) {
+  .nav-link {
+    padding: 0 5.5rem 0 5.5rem;
+  }
+}
+
+@media only screen and (min-width: 1000px) {
+  .nav-link {
+    padding-left: 5.5rem;
+    padding-right: 5.5rem;
+  }
+  .navbar_linkbox {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .ParallaxContainer {
+    background-image: url(../Images/facefinal.svg);
+    background-size: 50%;
+    background-position: center;
+  }
+  .ParallaxContainer p {
+    padding-right: 25%;
+  }
+  .MainContainer {
+    margin-top: none;
+  }
+  .contactme_container {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+
 .blog {
   width: 100%;
 }
@@ -19,30 +353,37 @@
 }
 
 .contactcard {
+  -webkit-filter: grayscale(100%);
+          filter: grayscale(100%);
+  width: 50%;
+  height: 50%;
   text-align: center;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
   opacity: 0.75;
   font-size: 4rem;
-  margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  width: 50%;
-  height: 50%;
+  -ms-flex-line-pack: baseline;
+      align-content: baseline;
+}
+
+.contactcard .fa {
+  color: #371E30;
 }
 
 .contactcard:hover {
   opacity: 1;
+  -webkit-filter: grayscale(0%);
+          filter: grayscale(0%);
 }
 
 .contactcard a {
@@ -51,9 +392,7 @@
 }
 
 .contactcard span {
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+  padding: 3.5rem 0 0 0;
 }
 
 .contactme_container {
@@ -94,20 +433,43 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  border: 0.5rem solid darkslategrey;
+  border: 1rem solid darkslategrey;
 }
 
 .blogpost {
   width: 100%;
-  height: 20%;
-  height: 4rem;
-  text-align: center;
-  border-bottom: 0.5rem solid darkslategrey;
+  max-height: 20%;
+  border-bottom: 0.5rem solid #687272;
   margin: auto 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.blogpost:first-of-type {
+  border-top: 0.5rem solid darkslategrey;
 }
 
 .blogpost h3 {
   text-decoration: none;
+  text-align: center;
+}
+
+.post_title {
+  border: 1px solid red;
+  width: 20%;
+  height: 100%;
+  padding: 0.5rem 1rem;
+}
+
+.post_content {
+  width: 80%;
+  height: 100%;
+  padding: 0.5rem 1rem;
 }
 
 .topbar {
