--- a/Scripts/globalstyles.css
+++ b/Scripts/globalstyles.css
@@ -46,6 +46,8 @@ body {
 }
 
 .MainContainer {
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
   height: 100vh;
   overflow-x: hidden !important;
   overflow-y: auto !important;
@@ -72,7 +74,7 @@ body {
       -ms-flex: 1 0 auto;
           flex: 1 0 auto;
   position: relative;
-  height: 72vh;
+  height: 70vh;
   -webkit-transform: translateZ(-1px) scale(2);
           transform: translateZ(-1px) scale(2);
   z-index: -1;
@@ -115,7 +117,6 @@ body {
       align-content: center;
   background-color: #dbdbdb;
   border-radius: 0.25rem;
-  width: auto;
 }
 
 #navbar {
@@ -144,6 +145,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  max-width: 95vw;
 }
 
 .nav-link:hover {
@@ -166,15 +168,12 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding-left: 0;
-  padding-right: 0;
   height: 100%;
-  max-width: 100%;
   -webkit-transition-duration: 0.05s;
           transition-duration: 0.05s;
   font-size: 1.5rem;
-  color: #575757;
-  overflow: hidden;
+  color: #3d3d3d;
+  overflow: auto;
 }
 
 .logo-full > * {
@@ -193,6 +192,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  max-width: 100vw;
 }
 
 .logo-part {
@@ -228,8 +228,7 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   padding: 1rem;
-  max-width: 100vw;
-  overflow: auto;
+  overflow: hidden;
 }
 
 .fa {
@@ -297,7 +296,7 @@ body {
           filter: invert(100%);
 }
 
-@media only screen and (min-width: 700px) {
+@media only screen and (min-width: 475px) {
   .nav-link {
     padding: 0 5.5rem 0 5.5rem;
   }
