--- a/Scripts/purposestyles.css
+++ b/Scripts/purposestyles.css
@@ -333,83 +333,9 @@ body {
   }
 }
 
-.portfolio {
-  background-color: #b9a4a4;
-  height: 80vh;
-  width: 90vw;
-  margin: 0 auto;
-}
-
-.skillbar {
+.purposecontainer {
   width: 100%;
-  height: 25%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  background-color: #b9a4a4;
-  border-bottom: 0.25rem solid #371E30;
-  border-bottom-left-radius: 0.25rem;
-  border-bottom-right-radius: 0.25rem;
-}
-
-.skillbar:first-of-type {
-  border-top: 0.25rem solid #371E30;
-}
-
-.skilldesc {
-  width: 75%;
-  text-align: center;
-  padding-left: 2rem;
-  background-color: #a18f8f;
-}
-
-.skilltile {
-  width: 25%;
   height: 100%;
-  font-size: 4rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  background-color: #dbdbdb;
 }
-
-.skilltile span {
-  margin: auto;
-}
-
-.skilltile img {
-  height: 65%;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-}
-
-.skilltile .coderacademy {
-  height: 50%;
-  width: auto;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-  margin: 0 0 2rem 0;
-}
-/*# sourceMappingURL=portfoliostyles.css.map */
+/*# sourceMappingURL=purposestyles.css.map */
