--- a/Scripts/contactstyles.scss
+++ b/Scripts/contactstyles.scss
@@ -33,8 +33,6 @@
   
 
   &:hover {
-    // transform: scaleX(1.05);
-    // z-index: 2;
     opacity: 1;
     filter: grayscale(0%)
   }
@@ -78,9 +76,9 @@
 
 .blogpost {
   width: 100%;
-  max-height: 20%;
+  height: auto;
   border-bottom: 0.5rem solid rgb(104, 114, 114);
-  margin: auto 0;
+  // margin: auto 0;
 
   display: flex;
   flex-direction: row;
@@ -96,16 +94,31 @@
 }
 
 .post_title {
-  border: 1px solid red;
   width: 20%;
-  height: 100%;
-  padding: 0.5rem 1rem;
+  padding: 0 1rem;
+  background-color: $stone;
 }
 
 .post_content {
-  width: 80%;
-  height: 100%;
+  width: 60%;
   padding: 0.5rem 1rem;
+}
+
+.post_thumbnail {
+  display: flex;
+  flex-direction: row;
+  width: 20%;
+  height: 100%;
+  justify-content: center;
+  margin: auto 0;
+  border-left: 0.5rem solid $stone;
+  
+
+  img {
+    width: 90%;
+    height: auto;
+    max-width: 10rem;
+  }
 }
 
 .topbar {
