--- a/Scripts/globalstyles.scss
+++ b/Scripts/globalstyles.scss
@@ -11,9 +11,8 @@ $rubble: #371E30;
 $offwhite: rgb(219, 219, 219);
 $linkgrey: rgb(49, 49, 49);
 $redfade: radial-gradient(#750000, #e00000);
-$stone: rgb(185, 164, 164);
+$stone: rgb(182, 184, 181);
 $navtext: rgb(61, 61, 61);
-
 
 * {
   margin: none;
@@ -67,23 +66,24 @@ body {
   flex-wrap: wrap;
   flex: 1 0 auto;
   position: relative;
-  height: 70vh;
+  height: 60vh;
   transform: translateZ(-1px) scale(2);
-  z-index: -1;
+  // z-index: -1;
   top: 0px;
   background-image: url(../Images/facefinal.svg);
   background-size: 125%;
   background-position: center;
   background-repeat: no-repeat;
 
-  p {
-    padding: 1rem 0rem;
-    padding-right: 10%;
-  }
+  // p {
+  //   padding: 1rem 0rem;
+  //   padding-right: 10%;
+  // }
 
 }
 
 // Hide parallax window scrollbar
+
 ::-webkit-scrollbar {
   display: none;
 }
@@ -107,7 +107,6 @@ body {
   border-radius: 0.25rem;
 }
 
-
 #navbar {
   display: flex;
   flex-direction: row;
@@ -123,13 +122,6 @@ body {
   max-width: 95vw;
 }
 
-
-// #navbar > .logo-full {
-//   display: grid;
-//   grid-template-columns: auto 1fr auto 1fr auto;
-// }
-
-// 
 .nav-link:hover {
   background-color: $linkgrey;
   transition-duration: 0.5s;
@@ -245,6 +237,20 @@ body {
   filter: invert(100%);
 }
 
+.bannertext {
+  font-size: 1.5rem;
+}
+
+#bannertextsmall {
+  font-size: 0.5rem;
+}
+
+.BannerSlogan {
+  width: 25vw;
+  margin-right: 20vw;
+
+}
+
 @media only screen and (min-width: 475px) {
   .nav-link {
     padding: 0 5.5rem 0 5.5rem;
@@ -253,7 +259,11 @@ body {
 
 
 
-@media only screen and (min-width: 1000px) {
+@media only screen and (min-width: 900px) {
+  .BannerSlogan {
+    padding-left: 10vw;
+  }
+
   .nav-link {
     padding-left: 5.5rem;
     padding-right: 5.5rem;
