--- a/Scripts/portfoliostyles.css
+++ b/Scripts/portfoliostyles.css
@@ -46,6 +46,8 @@ body {
 }
 
 .MainContainer {
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
   height: 100vh;
   overflow-x: hidden !important;
   overflow-y: auto !important;
@@ -72,20 +74,14 @@ body {
       -ms-flex: 1 0 auto;
           flex: 1 0 auto;
   position: relative;
-  height: 72vh;
+  height: 60vh;
   -webkit-transform: translateZ(-1px) scale(2);
           transform: translateZ(-1px) scale(2);
-  z-index: -1;
   top: 0px;
   background-image: url(../Images/facefinal.svg);
   background-size: 125%;
   background-position: center;
   background-repeat: no-repeat;
-}
-
-.ParallaxContainer p {
-  padding: 1rem 0rem;
-  padding-right: 10%;
 }
 
 ::-webkit-scrollbar {
@@ -115,7 +111,6 @@ body {
       align-content: center;
   background-color: #dbdbdb;
   border-radius: 0.25rem;
-  width: auto;
 }
 
 #navbar {
@@ -144,6 +139,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  max-width: 95vw;
 }
 
 .nav-link:hover {
@@ -166,15 +162,12 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding-left: 0;
-  padding-right: 0;
   height: 100%;
-  max-width: 100%;
   -webkit-transition-duration: 0.05s;
           transition-duration: 0.05s;
   font-size: 1.5rem;
   color: #3d3d3d;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .logo-full > * {
@@ -193,6 +186,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  max-width: 100vw;
 }
 
 .logo-part {
@@ -228,7 +222,6 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   padding: 1rem;
-  max-width: 100vw;
   overflow: hidden;
 }
 
@@ -297,7 +290,21 @@ body {
           filter: invert(100%);
 }
 
-@media only screen and (min-width: 700px) {
+.bannertext {
+  font-size: 1.5rem;
+}
+
+#bannertextsmall {
+  font-size: 0.5rem;
+}
+
+.BannerSlogan {
+  border: 1px solid red;
+  width: 25vw;
+  margin-right: 20vw;
+}
+
+@media only screen and (min-width: 475px) {
   .nav-link {
     padding: 0 5.5rem 0 5.5rem;
   }
@@ -334,7 +341,7 @@ body {
 }
 
 .portfolio {
-  background-color: #b9a4a4;
+  background-color: #b6b8b5;
   height: 80vh;
   width: 90vw;
   margin: 0 auto;
@@ -355,7 +362,7 @@ body {
           justify-content: center;
   -ms-flex-line-pack: center;
       align-content: center;
-  background-color: #b9a4a4;
+  background-color: #b6b8b5;
   border-bottom: 0.25rem solid #371E30;
   border-bottom-left-radius: 0.25rem;
   border-bottom-right-radius: 0.25rem;
@@ -368,8 +375,8 @@ body {
 .skilldesc {
   width: 75%;
   text-align: center;
-  padding-left: 2rem;
-  background-color: #a18f8f;
+  background-color: #a89c9c;
+  overflow-y: scroll;
 }
 
 .skilltile {
