--- a/Scripts/purposestyles.scss
+++ b/Scripts/purposestyles.scss
@@ -1,7 +1,15 @@
 @import 'globalstyles.scss';
 
 .purposecontainer {
-  width: 100%;
+  width: 100vw;
   height: 100%;
   background-color: $offwhite;
+}
+
+.mypurpose {
+  padding: 2rem;
+
+  h2 {
+    margin-bottom: 2rem;
+  }
 }
