--- a/Scripts/contactstyles.scss
+++ b/Scripts/contactstyles.scss
@@ -71,7 +71,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  border: 1rem solid darkslategrey;
+  border: 0.5rem solid darkslategrey;
 }
 
 .blogpost {
@@ -118,6 +118,7 @@
     width: 90%;
     height: auto;
     max-width: 10rem;
+    max-height: 100%;
   }
 }
 
